--- a/templates/base.html
+++ b/templates/base.html
@@ -203,14 +203,14 @@
                     </ul>
                     {% endif %}
                  <!-- Design Team -->
-                  {% set all_design_team_roles = ['Design Manager','Design Team Member', 'Technical Engineer', 'Document Controller','Lead Designer'] %}
+                  {% set all_design_team_roles = ['Operation Manager','QS','Design Manager','Design Team Member', 'Technical Engineer', 'Document Controller','Lead Designer'] %}
                  {% set design_team_roles = ['Design Team Member', 'Technical Engineer','Lead Designer'] %}
                  {% if user_roles | select('in', all_design_team_roles) | list | length > 0 %}
                 <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
                     <span>Design Studio</span>
                 </h6>
                 <ul class="nav flex-column mb-2">
-                    {% if 'Design Manager' in user_roles or 'Lead Designer' in user_roles %}
+                    {% if 'Design Manager' in user_roles or 'Lead Designer' in user_roles  or 'QS' in user_roles or 'Operation Manager' in user_roles  %}
                     <li class="nav-item">
                         <a class="nav-link" href="/design/dashboard">
                             <i class="bi bi-speedometer2 me-2"></i> Design Dashboard
@@ -221,7 +221,7 @@
                             <i class="bi bi-plus-circle me-2"></i> New Project
                         </a>
                     </li> -->
-                    {% if 'Design Manager' in user_roles or 'Lead Designer' in user_roles %}
+                    {% if 'Design Manager' in user_roles or 'Lead Designer' in user_roles or 'QS' in user_roles or 'Operation Manager' in user_roles, %}
                     <li class="nav-item">
                         <a class="nav-link" href="/design/v3/deals">
                             <i class="bi bi-briefcase-fill me-2"></i> New Deals (V3)
@@ -429,7 +429,7 @@
                             <i class="bi bi-plus-circle me-2"></i> New Project
                         </a>
                     </li> -->
-                    {% if 'Design Manager' in user_roles or 'Lead Designer' in user_roles %}
+                    {% if 'Design Manager' in user_roles or 'Lead Designer' in user_roles or 'QS' in user_roles %}
                     <li class="nav-item">
                         <a class="nav-link" href="/design/v3/deals">
                             <i class="bi bi-briefcase-fill me-2"></i> New Deals (V3)
